update openapi.yaml for more more endpoints
