# backend/internal/cmd/api/router.go
@@ -19,6 +19,7 @@ func NewRouter(validator *OpenAPIValidator, handlers *Handlers) http.Handler {
 	router.Use(validator.Middleware)
 
 	// public routes
+	router.Get("/health", handlers.HealthHandler.healthCheck)
 	router.Post("/auth/login", handlers.AuthHandler.Login)
 	router.Post("/auth/register", handlers.AuthHandler.Register)
 	router.Post("/auth/signin-with-google", handlers.AuthHandler.SignInWithGoogle)
@@ -28,7 +29,7 @@ func NewRouter(validator *OpenAPIValidator, handlers *Handlers) http.Handler {
 		r.Use(handlers.AuthHandler.Authenticator())
 
 		r.Route("/v1/users", func(r httproute.Router) {
-			r.Get("", handlers.UserHandler.List)
+			r.Get("/", handlers.UserHandler.List)
 		})
 	})
 
