# backend/openapi.yaml
@@ -7,6 +7,14 @@ info:
     name: buildpeak
     email: buildpeak@gmail.com
 paths:
+  /health:
+    get:
+      summary: Health check
+      responses:
+        '200':
+          description: Service is healthy
+      description: Check if the service is healthy
+      operationId: health-check
   /auth/login:
     post:
       summary: Authenticate user
@@ -78,6 +86,32 @@ paths:
           description: User registered successfully
       operationId: auth-register
       description: Sign a user up
+  /auth/signin-with-google:
+    post:
+      summary: Sign in with Google
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id_token:
+                  type: string
+              required:
+                - id_token
+      responses:
+        '200':
+          description: Successful authentication
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+      operationId: auth-signin-with-google
+      description: Sign a user in with Google
 servers:
   - url: 'http://localhost:3600'
     description: Dev
